# mcp_server_shell_helper

./: .env.example  .gitignore  CLAUDE.md  README.md  SSE_IMPLEMENTATION_SUMMARY.md  SSE_MIGRATION.md  client_with_servers.py  client_with_servers_sse.py  main.py  mcp_servers.json  mcp_servers_sse.json  open_dashboard.py  pyproject.toml  requirements.txt  server_shell_helper_sse.py  start_sse_server.sh  test_dashboard_playwright.py  test_quick_endpoint.py  test_table_parsing.html
.claude/: settings.local.json
api/: agent.py  main.py  models.py
api/static/: dashboard.css
api/templates/: dashboard.html
tests/: test_api.py  test_shell_agent.py
