[project]
name = "shell-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.17.0",
    "openai>=2.3.0",
    "python-dotenv>=1.1.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.2.1",
]

[tool.setuptools]
py-modules = ["server_shell_helper", "client_with_servers", "main"]
